# zkWasm-hyper

./: Cargo.toml  test_cli.sh  verifier_log.txt
crates/cli/: Cargo.toml
crates/cli/src/: app_builder.rs  args.rs  command.rs  config.rs  main.rs  names.rs
crates/specs/: Cargo.toml
crates/specs/src/encode/: init_memory_table.rs  mod.rs
crates/zkwasm/: Cargo.toml
crates/zkwasm/src/: lib.rs
crates/zkwasm/src/checksum/: mod.rs
crates/zkwasm/src/circuits/: cell.rs  mod.rs  rtable.rs  traits.rs
crates/zkwasm/src/circuits/bit_table/: assign.rs  configure.rs  mod.rs
crates/zkwasm/src/circuits/etable/: allocator.rs  assign.rs  constraint_builder.rs  mod.rs
crates/zkwasm/src/circuits/etable/op_configure/: op_bin.rs  op_bin_bit.rs  op_bin_shift.rs  op_br.rs  op_br_if.rs  (+22 more)
crates/zkwasm/src/circuits/external_host_call_table/: assign.rs  configure.rs  mod.rs
crates/zkwasm/src/circuits/image_table/: assign.rs  configure.rs  mod.rs
crates/zkwasm/src/circuits/jtable/: assign.rs  configure.rs  expression.rs  mod.rs
crates/zkwasm/src/circuits/mtable/: allocator.rs  assign.rs  mod.rs
crates/zkwasm/src/circuits/post_image_table/: continuation.rs  trivial.rs
crates/zkwasm/src/circuits/utils/: bit.rs  common_range.rs  image_table.rs  mod.rs  row_diff.rs  step_status.rs  u16.rs  u8.rs
crates/zkwasm/src/circuits/zkwasm_circuit/: mod.rs
crates/zkwasm/src/foreign/: mod.rs
crates/zkwasm/src/foreign/context/: etable_op_configure.rs
crates/zkwasm/src/foreign/log_helper/: mod.rs
crates/zkwasm/src/foreign/require_helper/: etable_op_configure.rs
crates/zkwasm/src/foreign/wasm_input_helper/: etable_op_configure.rs
crates/zkwasm/src/loader/: err.rs  slice.rs
crates/zkwasm/src/profile/: mod.rs
crates/zkwasm/src/runtime/: mod.rs
crates/zkwasm/src/runtime/host/: default_env.rs
(+5 files in other folders)
