[workspace]
members = ["crates/specs", "crates/zkwasm", "crates/cli"]
exclude = ["third-party/wasmi", "crates/playground"]
resolver = "2"


[patch."https://github.com/DelphinusLab/halo2-gpu-specific.git"]
halo2_proofs = { path = "../halo2-hyper/halo2_proofs" , default-features = true}

[workspace.dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
bincode = "1.3.3"
cfg-if = "1.0.0"
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", default-features = true }
num-traits = "0.2.15"
parity-wasm = { version = "0.42.0", features = ["sign_ext"] }
rayon = "1.8.0"
regex = "1.10.2"
static_assertions = "1.1.0"
wasmi = { path = "third-party/wasmi" }
[profile.dev]
opt-level = 3
