[package]
name = "zkwasm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.3"
log = "0.4.17"
md5 = "0.7.0"
sha2 = "0.10.6"
specs = { path = "../specs" }
clap = { version = "3.2.22", features = ["derive","cargo"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
wabt = "0.10.0"
delphinus-zkwasm = { path = "../zkwasm" }
plonkish_backend = { path = "../../../plonkish/plonkish_backend"}
anyhow.workspace = true
bincode.workspace = true
halo2_proofs.workspace = true
rand = "0.8"
indicatif = "0.17.7"
console = "0.15.8"
cfg-if.workspace = true

[features]
default = []
profile = ["delphinus-zkwasm/profile"]
cuda = ["delphinus-zkwasm/cuda"]
uniform-circuit = ["delphinus-zkwasm/uniform-circuit"]
continuation = ["uniform-circuit", "delphinus-zkwasm/continuation", "specs/continuation"]
